# stillhuman

./: .env.example  README.md
.github/workflows/: CI.yml
backend/: .env.example  README.md  atree.html  pyproject.toml
backend/app/controllers/: feedback.py  login.py  message.py  user.py  utils.py
backend/app/models/: feedback.py  generate.py  login.py  message.py
backend/app/models/store/: client.py  schema.py
backend/app/models/user/: validate.py
backend/app/routes/: __init__.py  main.py  status.py
backend/app/services/: feedback.py  login.py  message.py  user.py
frontend/: .env.example  .eslintrc.json  .prettierrc.js  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/actions/message/: generate.ts
frontend/src/actions/user/: login.ts  validate.ts
frontend/src/app/: layout.tsx
frontend/src/app/(home)/: page.tsx
frontend/src/app/api/user/: route.ts
frontend/src/components/: api-key-input.tsx  generate-section.tsx  title.tsx
frontend/src/components/shared/header/: buttons.tsx
frontend/src/components/shared/theme/: provider.tsx
frontend/src/constants/: route.ts
frontend/src/hooks/: use-generate.ts  use-login.ts  use-validate.ts
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css  typography.css
frontend/src/types/: apiKey.ts
frontend/src/types/actions/feedback/: form.ts
frontend/src/types/actions/message/: generate.ts
frontend/src/types/actions/user/: login.ts  (+1 more)
frontend/src/types/data/: apiKey.ts
frontend/src/types/store/: apiKey.ts  base.ts
(+2 files in other folders)
